[gd_scene load_steps=3 format=3 uid="uid://b85xpuqmx63h3"]

[ext_resource type="Script" uid="uid://dmtqxl8t5cv2d" path="res://src/Systems/Item/item.gd" id="1_ugo5y"]
[ext_resource type="StyleBox" uid="uid://dqlpe0g3eofpt" path="res://src/Common/UI/item_style_box_flat.tres" id="2_nbaa3"]

[node name="Item" type="Node2D"]
script = ExtResource("1_ugo5y")

[node name="BorderContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_nbaa3")

[node name="MarginContainer" type="MarginContainer" parent="BorderContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="ItemLabel" type="Label" parent="BorderContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Test item name"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="BorderContainer" to="." method="_on_border_container_gui_input"]
